--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head><title>Hadrian documentation</title></head>
+  <head><title>Hadrian documentation and JARs</title></head>
   <body>
     <ul>
+      <li><a href="jars-0.7.1">JAR files for Hadrian 0.7.1</a>
       <li><a href="hadrian-0.7.1">Hadrian 0.7.1 Scaladocs</a>
       <li><a href="titus-0.7.1">Titus 0.7.1 Sphinx docs</a>
     </ul>
