--- a/jars-0.7.1/index.html
+++ b/jars-0.7.1/index.html
@@ -15,7 +15,9 @@
       <li><a href="hadrian-mr-0.7.1.jar">hadrian-mr-0.7.1.jar</a>
       <li><a href="hadrian-mr-0.7.1-jar-with-dependencies.jar">hadrian-mr-0.7.1-jar-with-dependencies.jar</a>
       <li><a href="hadrian-mr-0.7.1.pom">hadrian-mr-0.7.1.pom</a>
+      <li><a href="hadrian-actors-0.7.1-exclude-antinous.jar">hadrian-actors-exclude-antinous-0.7.1.jar</a>
       <li><a href="hadrian-actors-0.7.1.jar">hadrian-actors-0.7.1.jar</a>
+      <li><a href="hadrian-actors-0.7.1-jar-with-dependencies.jar">hadrian-actors-0.7.1-jar-with-dependencies.jar</a>
       <li><a href="hadrian-actors-0.7.1.pom">hadrian-actors-0.7.1.pom</a>
       <li><a href="hadrian-gae-0.7.1.pom">hadrian-gae-0.7.1.pom</a>
       <li><a href="hadrian-gae-ear-0.7.1.ear">hadrian-gae-ear-0.7.1.ear</a>
