add aurelius package

--- a/jars-0.7.1/index.html
+++ b/jars-0.7.1/index.html
@@ -24,6 +24,7 @@
       <li><a href="hadrian-gae-ear-0.7.1.pom">hadrian-gae-ear-0.7.1.pom</a>
       <li><a href="hadrian-gae-war-0.7.1.pom">hadrian-gae-war-0.7.1.pom</a>
       <li><a href="hadrian-gae-war-0.7.1.war">hadrian-gae-war-0.7.1.war</a>
+      <li><a href="aurelius_0.7.1.tar.gz">aurelius_0.7.1.tar.gz</a>
     </ul>
   </body>
 </html>
